# Microprocessor-Raspberry-Pi-Pico

./: Arithmetic1.s  AsciiConversion.s  LICENSE  Parity.s  README.md
Pi Pico Coding/: README.md
Pi Pico Coding/assign01/: assign01.S  assign01.c  assign01.elf  assign01.uf2  temp.S
Pi Pico Coding/assign02/: CMakeLists.txt  README.md  assign02.S  assign02.c  morse.h
Pi Pico Coding/labs/lab01/: diagram.json  lab01.c  lab01.elf  lab01.uf2
Pi Pico Coding/labs/lab02/: diagram.json  lab02.c  lab02.elf  lab02.uf2
Pi Pico Coding/labs/lab03/: diagram.json  lab03.S  lab03.c  lab03.elf  lab03.uf2
Pi Pico Coding/labs/lab04/: lab04.c  lab04.elf  lab04.uf2  lab04_rslt.txt
Pi Pico Coding/labs/lab05/: lab05.S  lab05.c  lab05.elf  lab05.uf2
Pi Pico Coding/labs/lab06/: CMakeLists.txt  lab06.c  lab06.elf  lab06.uf2  lab06_rslt.txt
Pi Pico Coding/labs/lab07/: CMakeLists.txt  lab07.c  lab07.elf  lab07.uf2  lab07_rslt.txt
Pi Pico Coding/labs/lab08/: lab08.S  lab08.c  lab08.docx
Pi Pico Coding/labs/lab09/: CMakeLists.txt  lab09.S  lab09.c  lab09.elf  lab09.uf2  lab09_rslt.txt
Pi Pico Coding/labs/lab10/: CMakeLists.txt  lab10.S  lab10.c  morse_code.h
Simple Codes/: Arithmetic1.s  Hamming.s  Hamming2.s  HextoVal.s  README  ValtoHex.s
